turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_attribute_invalid_args.stderr
error: unexpected token, expected one of: "fs", "network", "non_local_return", "local_cells"
 --> tests/function/fail_attribute_invalid_args.rs:9:25
  |
9 | #[turbo_tasks::function(invalid_argument)]
  |                         ^^^^^^^^^^^^^^^^
